--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ################# DATABASE ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_board
+spring.datasource.url=jdbc:mysql://localhost:3306/calender
 spring.datasource.username=webuser
 spring.datasource.password=1234
 ################# HIKARI ??
