--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ logging.log4j2.config.override=classpath:log/log4j2.xml
 ############################
 ################# Thymeleaf ??
 spring.thymeleaf.cache=false
-spring.web.resources.cache.cachecontrol.no-cache=true
+spring.mvc.static-path-pattern="/static/**"
+#spring.web.resources.cache.cachecontrol.no-cache=true
