--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ logging.log4j2.config.override=classpath:log/log4j2.xml
 spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern="/static/**"
 #spring.web.resources.cache.cachecontrol.no-cache=true
+################FILe
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
