--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ################# DATABASE ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/calender
+spring.datasource.url=jdbc:mysql://192.168.2.5:3306/calender
 spring.datasource.username=webuser
 spring.datasource.password=1234
 ################# HIKARI ??
@@ -15,7 +15,6 @@ logging.log4j2.config.override=classpath:log/log4j2.xml
 ############################
 ################# Thymeleaf ??
 spring.thymeleaf.cache=false
-spring.mvc.static-path-pattern="/static/**"
 #spring.web.resources.cache.cachecontrol.no-cache=true
 ################FILe
 spring.servlet.multipart.maxFileSize=10MB
